# granular-synthesizer

./: .gitignore  CMakeLists.txt  GRANULATOR SYNTH — COMPLETE ATTRIBUTE RE.txt  README.md
.claude/: settings.local.json
.superpowers/brainstorm/554-1779711221/content/: layout-approaches.html
.superpowers/brainstorm/554-1779711221/state/: server-stopped
docs/superpowers/plans/: 2026-05-25-granulator-ui-redesign.md  2026-05-26-granulator-functional-fix.md
docs/superpowers/specs/: 2026-05-25-granulator-ui-redesign-design.md  2026-05-26-granulator-functional-fix-design.md
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/dsp/: EffectsChain.cpp  EffectsChain.h  GranularParams.h
source/grain/: Grain.h  GrainBuffer.cpp  GrainBuffer.h  GrainEnvelope.cpp  GrainEnvelope.h  GranularEngine.cpp  GranularEngine.h
source/modulation/: EnvelopeFollower.cpp  EnvelopeFollower.h  LFO.cpp  LFO.h  ModMatrix.cpp  ModMatrix.h
source/synth/: GranularSynth.cpp  GranularSynth.h  GranularVoice.cpp  GranularVoice.h
source/ui/: GranularLookAndFeel.cpp  GranularLookAndFeel.h
source/ui/components/: EQCurveDisplay.cpp  EQCurveDisplay.h  FilterCurveDisplay.cpp  FilterCurveDisplay.h  GrainDotDisplay.cpp  GrainDotDisplay.h  KnobWithLabel.cpp  KnobWithLabel.h  ModMatrixGrid.cpp  ModMatrixGrid.h  ReverbBlobDisplay.cpp  ReverbBlobDisplay.h  WaveformDisplay.cpp  WaveformDisplay.h
source/ui/sections/: AmplitudeSection.cpp  AmplitudeSection.h  BufferSection.cpp  BufferSection.h  EffectsSection.cpp  EffectsSection.h  FilterSection.cpp  FilterSection.h  GrainCoreSection.cpp  GrainCoreSection.h  ModSection.cpp  ModSection.h  PitchSection.cpp  PitchSection.h  PlayheadSection.cpp  PlayheadSection.h  RecordSection.cpp  RecordSection.h  SpatialSection.cpp  SpatialSection.h
